HW: Project Setup and Proposal - Complete

--- a/notebook/exploritory/Preliminary Analysis and Baseline.ipynb
+++ b/notebook/exploritory/Preliminary Analysis and Baseline.ipynb
@@ -141,7 +141,7 @@
    ],
    "source": [
     "# ==========================================\n",
-    "# Part B2: Initial Exploratory Data Analysis\n",
+    "# Part B2: Initial Exploratory Data Analysis (ChatGPT Assisted)\n",
     "# ==========================================\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
