--- a/notebook/exploritory/Preliminary Analysis and Baseline.ipynb
+++ b/notebook/exploritory/Preliminary Analysis and Baseline.ipynb
@@ -261,7 +261,7 @@
     "y = df[target_col]\n",
     "\n",
     "# ------------------------------------------\n",
-    "# 3. Handle missing values using mean imputation\n",
+    "# 3. Handle missing values using mean imputation (ChatGPT Assisted)\n",
     "# ------------------------------------------\n",
     "imputer = SimpleImputer(strategy=\"mean\")\n",
     "X_imputed = pd.DataFrame(imputer.fit_transform(X), columns=X.columns)\n",
@@ -270,7 +270,7 @@
     "X_train, X_test, y_train, y_test = train_test_split(X_imputed, y, test_size=0.2, random_state=42)\n",
     "\n",
     "# ------------------------------------------\n",
-    "# 4. Baseline Model: Mean Predictor\n",
+    "# 4. Baseline Model: Mean Predictor \n",
     "# ------------------------------------------\n",
     "mean_model = DummyRegressor(strategy=\"mean\")\n",
     "mean_model.fit(X_train, y_train)\n",
@@ -287,7 +287,7 @@
     "print(f\"R²: {r2_mean:.3f}\")\n",
     "\n",
     "# ------------------------------------------\n",
-    "# 5. Simple Linear Regression\n",
+    "# 5. Simple Linear Regression (ChatGPT Assisted)\n",
     "# ------------------------------------------\n",
     "linreg = LinearRegression()\n",
     "linreg.fit(X_train, y_train)\n",
@@ -304,7 +304,7 @@
     "print(f\"R²: {r2_lr:.3f}\")\n",
     "\n",
     "# ------------------------------------------\n",
-    "# 6. Plot: True vs Predicted Comparison\n",
+    "# 6. Plot: True vs Predicted Comparison (ChatGPT Assisted)\n",
     "# ------------------------------------------\n",
     "plt.figure(figsize=(8, 6))\n",
     "sns.scatterplot(x=y_test, y=y_pred_lr, alpha=0.7, edgecolor=None)\n",
